# x-ray

./: .env.example  .gitignore  README.md  Technical Documentation.md  User Documentation.md  main.py  manage.py  pyproject.toml  requirements.txt  setup_mmdetection.sh  test_merged_function.py
ncu/: asgi.py  settings.py  urls.py  views.py  wsgi.py
products/: models.py  views.py
products/migrations/: 0001_initial.py  0002_product_url.py
static/stylesheets/: styles.css
templates/: base.html  cancel.html  home.html  landing.html  success.html
templates/partials/: footer.html  head.html  header.html
templates/registration/: login.html  register.html
users/: apps.py  forms.py  urls.py  views.py
users/fixtures/: user_and_groups.json
xray/: forms.py  models.py  urls.py  views.py
xray/migrations/: 0001_initial.py  0002_alter_xrayimage_xray_img.py  0003_xrayimage_prediction_xrayimage_probability.py  0004_xrayimage_approval_status_and_more.py  0005_xrayimage_user_feedback.py  0006_remove_xrayimage_approval_status_and_more.py  0007_xrayimage_xray_img_det_xrayimage_xray_img_origin.py
xray/templates/: display_xrays.html  image_upload.html  success_upload.html  view_xray.html
