[project]
name = "ncu-issp-main"
version = "0.1.0"
description = "Django X-Ray Medical Imaging Application"
requires-python = ">=3.9"
dependencies = [
    "Django==4.1.2",
    "Pillow==9.4.0",
    "stripe==5.2.0",
    "jupyter==1.0.0",
    "python-decouple==3.8",
    "torch==2.1.2",
    "torchvision==0.16.2",
    "numpy<2.0",
]
